# vibdd

./: CREDITS.md  README.md  pyproject.toml  test_api_access.py
features/: articles.feature  login.feature  order.feature
src/vibdd/templates/: cart.html  index.html  register.html
src/vibe/: README.md  app.py
src/vibe/templates/: articles.html  checkout.html  login.html
