[tool.poetry]
name = "vibe"
version = "0.1.0"
description = "Example on vibe coding applying TDD paradigms"
authors = ["DarakDuVal <oliver@irudolph.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.70.0"
dotenv = "^0.9.9"
flask = "^3.1.0"
flask-wtf = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
